Подключены камеры Логика для Беларусов в создании отчетов Чат-бот
